--- a/documentation/docs/models/sql-name-inference.mdx
+++ b/documentation/docs/models/sql-name-inference.mdx
@@ -7,7 +7,7 @@ import TabItem from '@theme/TabItem';
 
 # Configuring Table & Column names
 
-This chapter is about customizing the name of Database Columns & Tables, not to be confused with JavaScript [Attributes & Models](../terminology).
+This chapter is about customizing the name of Database Columns & Tables, not to be confused with JavaScript [Attributes & Models](../terminology.md).
 
 ## Table Names
 
@@ -223,14 +223,14 @@ By default, the name of this attribute is equal to the name of the target model 
 
 Without the `underscored` option, Sequelize would automatically define:
 
-* A [`createdAt`](./auto-timestamps) attribute for each model, pointing to a column named `createdAt` in each table.
-* An [`updatedAt`](./auto-timestamps)  attribute for each model, pointing to a column named `updatedAt` in each table.
+* A [`createdAt`](./auto-timestamps.mdx) attribute for each model, pointing to a column named `createdAt` in each table.
+* An [`updatedAt`](./auto-timestamps.mdx) attribute for each model, pointing to a column named `updatedAt` in each table.
 * A `UserId` attribute in the `Task` model, pointing to a column named `UserId` in the task table.
 
 With the `underscored` option enabled, Sequelize will instead define:
 
-* A [`createdAt`](./auto-timestamps)  attribute for each model, pointing to a column named `created_at` in each table.
-* An [`updatedAt`](./auto-timestamps)  attribute for each model, pointing to a column named `updated_at` in each table.
+* A [`createdAt`](./auto-timestamps.mdx) attribute for each model, pointing to a column named `created_at` in each table.
+* An [`updatedAt`](./auto-timestamps.mdx) attribute for each model, pointing to a column named `updated_at` in each table.
 * A `UserId` attribute in the `Task` model, pointing to a column named `user_id` in the task table.
 
 Note that in both cases the fields are still [camelCase](https://en.wikipedia.org/wiki/Camel_case) in the JavaScript side; this option only changes how these fields are mapped to the database itself. The `field` option of every attribute is set to their snake_case version, but the attribute itself remains camelCase.
