--- a/AUTHORS
+++ b/AUTHORS
@@ -33,6 +33,7 @@ Grzegorz Niewisiewicz <grzegorz@niewisiewicz.pl>
 Raúl Acuña <reacuna@gmail.com>
 Mick Hansen <doomschild@gmail.com>
 Jan Aagaard Meier <janzeh@gmail.com>
+Vraj Patel <vrajpatel4905@gmail.com>
 Rauno56 <rviskus@gmail.com>
 Edgar Veiga <edgarmveiga@gmail.com>
 Rob Raux <rraux@whentomanage.com>
